<resources>
    <string name="app_name">VNPR</string>
    <string name="vehicle_information">VEHICLE INFORMATION</string>
    <string name="scanner">SCANNER</string>
    <string name="list">LIST</string>
    <string name="about_app">ABOUT APP</string>
    <string name="open_drawer" />
    <string name="close_drawer" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name="list_fragment">List Fragment</string>
    <string name="scanner_fragment">Scanner Fragment</string>
    <string name="vehicle_information_fragment">Vehicle Information Fragment</string>
    <string name="enter_owner_name">Enter Owner Name</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="enter_vehicle_type">Enter Vehicle Type</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="login">Login</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in1">Log In</string>
    <string name="login1">LOGIN</string>
    <string name="enter_vehicle_model">Enter Vehicle Model</string>
    <string name="enter_type_of_vehicle_fuel">Enter Type of Vehicle Fuel</string>
    <string name="create">Create</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">LOG IN</string>
    <string name="email1">email</string>
    <string name="password1">password</string>
    <string name="log_in2">Log in</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="email2">email</string>
    <string name="password2">password</string>
    <string name="already_have_an_account_nlogin_here">Already have an account.\nLogin Here</string>

</resources>
