<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01579b"
    android:orientation="vertical"
    tools:context=".Activity.login"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginLayout"
        android:layout_marginBottom="-17dp"
        android:orientation="vertical">


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="LOG IN"
            android:textColor="#fff"
            android:textSize="35sp"
            android:textStyle="bold"/>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="70dp"
            android:background="@drawable/loginshape"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="30dp"
                android:layout_marginTop="0dp">


                <TextView
                    android:labelFor="@id/text_email"
                    android:text="@string/email1"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/text_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email"
                    android:drawablePadding="10dp"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:hint="john@gmail.com"
                    android:inputType="textEmailAddress"/>

                <TextView
                    android:labelFor="@id/edit_text_password"
                    android:text="@string/password1"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:drawablePadding="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:id="@+id/edit_text_password"
                    android:drawableLeft="@drawable/lock"
                    android:hint="Password"
                    android:inputType="textPassword"/>


                <TextView
                    android:id="@+id/text_view_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:text="Forgot Password?"/>


                <Button
                    android:id="@+id/button_sign_in"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_shape"
                    android:layout_gravity="center"
                    android:text="@string/log_in2"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="Don't have an account Sign Up Now " />

                <Button
                    android:id="@+id/text_view_register"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_shape"
                    android:onClick="createActivity"
                    android:text="SIGN UP"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="14sp" />

                <!--                <com.google.android.gms.common.SignInButton-->
<!--                    android:layout_width="210dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="20dp"-->
<!--                    android:layout_marginLeft="80dp"-->
<!--                    android:layout_marginRight="80dp"-->
<!--                    android:padding="20dp" />-->
            </LinearLayout>


        </RelativeLayout>

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/launcher_background"
            android:elevation="4dp"
            android:src="@drawable/boy"/>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
